# grapheneX

./: .all-contributorsrc  .bumbversion.cfg  .bumpversion.cfg  .dockerignore  .env-example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Pipfile  README.md  grapheneX.py  modules.json  pyproject.toml  requirements.txt  ruff.toml  setup.py  test_graphenex.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  bug-report.yml  feature-request.yml
.github/workflows/: CI.yaml  ci.yml  codeql-analysis.yml  codeql.yml  docker.yml  lint.yml  publish.yml
core/: argparser.py  helpers.py  logcl.py  shell.py
core/cli/: commands.py  help.py  override.py  shell.py
core/hrd/: __init__.py
core/hrd/linux/: __init__.py  kernel.py
core/hrd/linux/kernel/: logs.py
core/hrd/win/: __init__.py  firewall.py
core/linux/: exec.py
core/utils/: argparser.py  helpers.py  logcl.py
core/web/: __init__.py  server.py  views.py
core/web/static/css/: index.css
core/web/static/js/: index.js  template.js
core/web/templates/: index.html
core/win/: editreg.py  exec.py
docker/: Dockerfile
graphenex/: __init__.py  __main__.py  modules.json
graphenex/core/cli/: commands.py  help.py  shell.py
graphenex/core/hrd/: __init__.py  exec.py
graphenex/core/utils/: helpers.py  logcl.py  sysinfo.py
graphenex/core/web/: __init__.py  providers.py  views.py
graphenex/core/web/frontend/: index.js  package-lock.json  package.json  webpack.config.js
graphenex/core/web/templates/: 404.html  auth.html  control.html  (+1 more)
(+17 files in other folders)
